--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@mui/material": "^5.15.11",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.0",
